dogs/k8s/resources-dev.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: dogs-app
  labels:
    app: dogs-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dogs-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: dogs-app
        group: micro-pet
    spec:
      containers:
        - name: dogs
          image: registry.local:5000/micropet/dogs:dev
          ports:
            - name: dogs
              containerPort: 7003
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: dogs-service
  labels:
    app: dogs-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: dogs
      port: 7003
  selector:
    app: dogs-app
    group: micro-pet
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dogs-ingress  
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`dogs.dev.pet-cluster.demo`)
    kind: Rule
    services:
    - name: dogs-service
      port: 7003
